--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <filter>
         <filter-name>UserLogin</filter-name>
-        <filter-class>model.MemberFilter</filter-class>
+        <filter-class>controller.MemberFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>UserLogin</filter-name>
