Created form for making a claim - modified Make claim servlet, missing '/' in url pattern

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -55,7 +55,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>MakeClaim</servlet-name>
-        <url-pattern>MakeClaim.do</url-pattern>
+        <url-pattern>/MakeClaim.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
