Members can now register. Members can submit claims

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -41,6 +41,10 @@
         <servlet-name>MakeClaim</servlet-name>
         <servlet-class>controller.MakeClaim</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegisterUser</servlet-name>
+        <servlet-class>controller.RegisterUser</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ListAllMembers</servlet-name>
         <url-pattern>/ListAllMembers</url-pattern>
@@ -56,6 +60,10 @@
     <servlet-mapping>
         <servlet-name>MakeClaim</servlet-name>
         <url-pattern>/MakeClaim.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegisterUser</servlet-name>
+        <url-pattern>/RegisterUser.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
