--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -65,6 +65,10 @@
         <servlet-name>ListMembers</servlet-name>
         <servlet-class>controller.ListMembers</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ClaimCharge</servlet-name>
+        <servlet-class>controller.ClaimCharge</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ListAllMembers</servlet-name>
         <url-pattern>/ListAllMembers.do</url-pattern>
@@ -104,6 +108,10 @@
     <servlet-mapping>
         <servlet-name>ListMembers</servlet-name>
         <url-pattern>/ListMembers.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ClaimCharge</servlet-name>
+        <url-pattern>/ClaimCharge.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
